<resources>
    <string name="app_name">Poly Assist</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Forgot your grades..?</string>
    <string name="slide_1_desc">I will remember for you</string>

    <string name="slide_2_title">Lightning speed ..!</string>
    <string name="slide_2_desc">Fastest cloud support </string>

    <string name="slide_3_title">Secured with google API</string>
    <string name="slide_3_desc">Always watch you and help you</string>

    <string name="slide_4_title">Simple and best UI..!</string>
    <string name="slide_4_desc">Best User Interface</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_user_type">UserType</string>


    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="sub_data_communication">Data Communication</string>
    <string name="sub_operating_system">Operating System</string>
    <string name="sub_data_structure">Data Structure</string>
    <string name="sub_Computer_System_Hardware">Computer System Hardware</string>
    <string name="sub_system_admin_lab">System Administration Lab</string>
    <string name="sub_data_structure_lab">Data Structures Lab</string>
    <string name="sub_csh_lab">Computer System Hardware Lab</string>
    <string name="sub_app_dev_lab">Application Development</string>

    <string name="sub_industrial_visit">Industrial Visit</string>
    <string name="sub_softare_eng">Software Engineering</string>
    <string name="sub_web_programmin">Web Programming</string>
    <string name="sub_elective">Elective</string>
    <string name="sub_microprocessor">Microprocessor</string>
    <string name="sub_web_lab">Web Programming LAB</string>
    <string name="sub_mp_lab">Microprocessor LAB</string>
    <string name="sub_computer_networks">CNE LAB</string>
    <string name="sub_mc">Microcontroller</string>
    <string name="sub_mc_lab">Microcontroller LAB</string>
    <string name="sub_smart_device_programmin">Smart Device Programming</string>
    <string name="sub_cn">Computer Networks</string>
    <string name="sub_sdp_lab">SDP LAB</string>
    <string name="sub_project_seminar">Project-Seminar</string>

    <string name="sub_dcp">DCP</string>
    <string name="sub__oop_C">OOP C++</string>
    <string name="sub_ca">Computer Architecture</string>
    <string name="sub_dbms">DBMS</string>
    <string name="sub_evs">EVS</string>
    <string name="sub_dcp_lab">DCP LAB</string>
    <string name="sub_oop_lab">OOP LAB</string>
    <string name="sub_dbms_lab">DBMS LAB</string>

    <string name="sub_english_ii">English II</string>
    <string name="sub_maths_ii">Mathematics II</string>
    <string name="sub_physics_ii">Physics II</string>
    <string name="sub_chemistry_ii">Chemistry II</string>
    <string name="sub_programming_in_c">Programming in C</string>
    <string name="sub_engineering_graphics">Engineering Graphics</string>
    <string name="sub_Workshop_practice">Worksop Practice</string>
    <string name="sub_sub_science_lab">Science LAB</string>
    <string name="sub_programmin_in_c_lab">C Programmin LAB </string>
    <string name="sub_life_skill">Life Skill</string>

    <string name="sub_english_i">English I</string>
    <string name="sub_mathematics_i">Mathematics I</string>
    <string name="sub_physics_i">Physics I</string>
    <string name="sub_chemistry_i">Chemistry I</string>
    <string name="sub_hpe">HPE</string>
    <string name="sub_computing_fund">Computing Fundamentals</string>
    <string name="sub_science_lab_i">Science LAB I</string>

    <string name="sub_survey_practical_i">Survay Practical I</string>
    <string name="sub_surveying_i">Surveying I</string>


    <string name="sub_theory_structures_i">Theory Structures I</string>
    <string name="sub_surveying_ii">Surveying II</string>
    <string name="sub_concrete_lab">Concrete LAB</string>
    <string name="sub_construction_lab">Construction Eng LAB</string>
    <string name="sub_survey_practical_ii">Survey Practical II</string>
    <string name="sub_construction_materials_eng">CM and Eng</string>
    <string name="sub_building_plan_drawing">Building Plan,Drawing</string>


    <string name="sub_construction_materials_and_engineering">CM and Eng</string>
    <string name="sub_environmental_science_and_disaster_management">Environmental Science and Disaster Management</string>
    <string name="sub_building_planning_and_drawing">Building Planning,Drawning</string>


    <string name="sub_theory_structures_ii">Theory Structures II</string>
    <string name="sub_quantity_surveying_i">Quantity Surveying II</string>
    <string name="sub_hydraulics">Hydraulics</string>
    <string name="sub_irrigation_engineering">Irrigation Engineering</string>
    <string name="sub_survey_practical_iii">Survey Practical III</string>
    <string name="sub_hydraulics_lab">Hydraulics LAB</string>
    <string name="sub_computer_aided_drafting_lab">Computer Aided Drafting LAB</string>
    <string name="sub_mini_project">Mini Project</string>

    <string name="sub_construction_management_and_safty_engineering">Construction Management,Safty Eng</string>
    <string name="sub_structural_design_i">Structural Design I</string>
    <string name="sub_geotechnical_engineering">Geotechnical Eng</string>
    <string name="sub_quantity_surveying_ii">Quantity Surveying II</string>
    <string name="sub_building_maintenance_and_services">BM and Services</string>
    <string name="sub_cost_effective_construction_green_building">CEC and Green Building</string>
    <string name="sub_habitat_technology">Habitat Technology</string>
    <string name="sub_geotechnical_engineering_lab">Geotechnical Eng LAB</string>
    <string name="sub_computer_appication_lab">Computer Application LAB</string>


    <string name="sub_structural_design_ii">Structural Design II</string>
    <string name="sub_environmental_engineering">Environmental Eng</string>
    <string name="sub_transportation_engineering">Transportation Eng</string>
    <string name="sub_concrete_technology">Concrete Technology</string>
    <string name="sub_design_of_pre_stressed_oncrete">Design of Pre-stressed Concrete</string>
    <string name="sub_ground_improvement_technique">Ground Improvement Technique</string>
    <string name="sub_structural_and_irrigation_engineering_drawing">Structural,Irrigation Eng Drawing</string>
    <string name="sub_material_lesting_lab">Material Testing LAB</string>
    <string name="sub_environmental_engineering_lab">Environmental Eng LAB</string>


    <string name="sub_basic_electrical_engineering">Basic Electrical Eng</string>
    <string name="sub_basic_electrical_engineering_workshop">Basic Electrical Eng Workshop</string>


    <string name="sub_electrical_measuring_instruments">Electrical Measuring Instruments</string>
    <string name="sub_analog_devices_and_circuits">Analog Devices and Circuits</string>
    <string name="sub_fundamentals_of_ac_systems">Fundamentals of AC Systems</string>
    <string name="sub_mechanical_engineering">Mechanical Engineering</string>
    <string name="sub_electrical_measurements_lab"> Electrical Measurements LAB</string>
    <string name="sub_electrical_workshop_practice">Electrical Workshop Practice</string>
    <string name="sub_mechanical_engineering_lab">Mechanical Engineering Lab</string>


    <string name="sub_electric_power_generation_transmission_distribution">Electric Power Generation, Transmission B
Distribution</string>
    <string name="sub_electrical_estimating_and_costing">Electrical Estimating,Costing</string>
    <string name="sub_dc_machines">DC Machines</string>
    <string name="sub_digital_electronics_and_microprocessors">Digital Electronics,Microprocessors</string>
    <string name="sub_electrical_engineering_drawing">Electrical Engineering Drawing</string>
    <string name="sub_dc_machines_lab">DC Machines LAB</string>
    <string name="sub_electrical_computer_aided_drafting_lab">Electrical Computer Aided Drafting Lab</string>
    <string name="sub_industrial_electrical_engineering_lab">Industrial Electrical Engineering LAB</string>


    <string name="sub_industrial_management_and_safety">Industrial Management and Safety</string>
    <string name="sub_induction_machines">Induction Machines</string>
    <string name="sub_power_electronics"> Power Electronics</string>
    <string name="sub_renewable_energy_sources">Renewable Energy Sources</string>
    <string name="sub_advanced_electrical_measurements_and_instrumentation">Advanced Electrical Measurements and
Instrumentation</string>
    <string name="sub_electrical_engineering_materials">Electrical Engineering Materials</string>
    <string name="sub_ac_machines_lab_i">A C Machines Lab I</string>
    <string name="sub_electronics_lab">Electronics Lab</string>
    <string name="sub_science_lab_ii">Science LAB II</string>


    <string name="sub_synchronous_machines_andfhp_motors">Synchronous Machines and FHP Motors</string>
    <string name="sub_electrical_power_utilization_and_system_protection">Electrical Power Utilization and System Protection</string>
    <string name="sub_microcontrollers_and_programmable_logic_controllers">Microcontrollers and Programmable logic
Controllers</string>
    <string name="sub_electrical_devices_and_controls">Electrical Devices and Controls</string>
    <string name="sub_electrical_machine_design">Electrical Machine Design</string>
    <string name="sub_industrial_automation">Industrial Automation</string>
    <string name="sub_industrial_automation_lab">Industrial Automation LAB</string>
    <string name="sub_ac_machines_lab_ii">A C Machines Lab II</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>