<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"

    android:orientation="vertical">

    <TextView
        android:textColor="#fff"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/phone_auth_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"

        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text"
                android:textColorHint="#fff"/>
            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:textColorHint="#fff"/>
            <EditText
                android:id="@+id/txt_college_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="College ID"
                android:inputType="phone"
                android:textColorHint="#fff"/>


            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:textColorHint="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_phone_auth"
                android:background="@drawable/bg_button"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/roundbutton"
                android:text="@string/verify_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/resend_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="vertical">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/pBar3_phone"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="25dp"
            android:minWidth="100dp"
            android:max="10000"
            android:indeterminate="true"
            android:progress="1"
            android:visibility="invisible"/>


    </LinearLayout>

</LinearLayout>
